--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "hbs": "^4.2.0",
     "nodemon": "^2.0.22",
     "postman-request": "^2.88.1-postman.32",
     "yargs": "^17.7.2"
